Feat(web): favourites mechanism opened to shared link collaborators
